# sokolc

./: CMakeLists.txt  imgui.ini
ext/: cimgui_impl.h  imgui_backend_sdl.cpp  imgui_impl_sdlrenderer.cpp
lib/SDL/: CMakeLists.txt
lib/cimgui/: CMakeLists.txt  cimgui.cpp  cimgui.h
lib/sokol/: sokol_gfx.h
lib/sokol_gp/: sokol_gp.h
old/: config.h  defs.c  defs.h  imgui.c  imgui.h  main.c  reload.c  reload.h  shared_defs.h  state.c  state.h
old/editor/: cursor.c  cursor.h  editor.c  editor.h  map.c  map.h  ui.c  ui.h  ui_misc.c  ui_misc.h
old/gfx/: atlas.c  atlas.h  dynbuf.c  dynbuf.h  gfx.c  gfx.h  opengl.h  palette.c  palette.h  renderer.c  renderer.h  renderer_types.h  sokol.c  sokol.h  sokol_gfx_ext.h
old/level/: actor.c  actor.h  block.c  block.h  decal.c  decal.h  io.c  io.h  level.c  level.h  level_defs.h  lptr.c  lptr.h  object.c  object.h  particle.c  particle.h  path.c  path.h  portal.c  portal.h  sectmat.c  sectmat.h  sector.c  sector.h  side.c  side.h  side_texinfo.c  side_texinfo.h  sidemat.c  sidemat.h  tag.c  tag.h  vertex.c  vertex.h  wall.c  wall.h
old/shader/: basic.glsl  basic.glsl.h  batch.glsl  batch.glsl.h  common.glsl  common.glsl.h  ctypes.glsl  ctypes.glsl.h  level.glsl  level.glsl.h  screenquad.glsl  screenquad.glsl.h  sprite.glsl  sprite.glsl.h
old/util/: aabb.h  assert.h  bitmap.h  color.h  dlist.h  dynlist.h  enum.h  file.h  hash.h  image.h  ini.c  ini.h  input.h  ivec2.h  ivec2s.h  llist.h  macros.h  map.h  math.c  math.h  rand.h  resource.c  sound.c  (+5 more)
res/: default_settings.ini
src/: imgui.c  imgui.h  main.c  sdl2.h  state.h
(+139 files in other folders)
